--- a/style.css
+++ b/style.css
@@ -41,14 +41,16 @@ header{
 
 .section-container {
     display: flex;
-    border: 1px solid red;
     align-items: center;
     justify-content: center;
 }
 
 .section-container .information{
-    border: 1px solid white;
-    width: 50%;
+    width: 40%;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
 }
 
 .section-container .information h2{
@@ -56,7 +58,27 @@ header{
     font-weight: extra-bold;
     color: #f9f4f8;
 }
+.section-container .information p{
+    font-size: 18px;
+    color: #e5e7eb;
+}
 
-.section-container .main-image{
-    border: 1px solid white;
+.section-container .information button{
+    background-color: #3882f6;
+    color: #e5e7eb;
+    font-size: 14px;
+    border: none;
+    outline: none;
+    padding: 1%;
+    border-radius: 5px;
+    width: 20%;
+}
+
+.section-container .main-image {
+    padding: 20px;
+}
+
+.section-container .main-image img{
+    width: 350px;
+    border-radius: 5px;
 }
